--- a/package.json
+++ b/package.json
@@ -8,33 +8,42 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-   "neno-baileys": "^1.0.0",
+    "neno-baileys": "^1.0.0",
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "pino": "^8.17.0",
-    "jimp": "^0.16.1",
-    "@dark-yasiya/scrap":"1.0.1",
+
+    "jimp": "^0.16.1",             
+    "@dark-yasiya/scrap": "^1.0.1",
     "@octokit/rest": "^20.0.2",
-    "denethdev-ytmp3":"1.0.3",
-    "cheerio": "1.1.0",
-    "ruhend-scraper": "9.0.1",
-    "@google/genai":"1.22.0",
+    "denethdev-ytmp3": "1.0.3",
+    "cheerio": "1.0.0-rc.12",
+
+    "ruhend-scraper": "^10.0.0",     
+
+    "@google/genai": "1.22.0",
     "yt-search": "2.12.1",
-    "fluent-ffmpeg": "^2.1.2",
+
+    "fluent-ffmpeg": "^2.1.3",
     "ffmpeg-static": "^5.1.0",
-    "node-fetch": "3.3.2",
-    "sharp":"0.34.1",
+
+    "node-fetch": "^3.3.2",
+    "sharp": "0.33.3",             
+
     "@dark-yasiya/yt-dl.js": "1.0.5",
-    "file-type": "21.0.0",
-    "axios": "^1.2.5",
-    "moment-timezone": "^0.6.0",
-    "mongodb": "^5.7.0",
+    "file-type": "18.7.0",
+
+    "axios": "^1.6.0",
+    "moment-timezone": "^0.5.45",
+
+    "mongodb": "^6.3.0",
+
     "telegraph-uploader": "2.0.0",
     "imgbb-uploader": "1.5.1",
     "@blackamda/telegram-image-url": "1.0.0"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.0.0"
   },
   "keywords": [
     "whatsapp",
